--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 
 project(Chippy LANGUAGES C)
 
-add_executable(Chippy ${PROJECT_SOURCE_DIR}/src/main.c ${PROJECT_SOURCE_DIR}/src/core.c)
+add_executable(Chippy ${PROJECT_SOURCE_DIR}/src/main.c ${PROJECT_SOURCE_DIR}/src/core.c ${PROJECT_SOURCE_DIR}/src/embed.c)
 target_include_directories(Chippy PUBLIC ${PROJECT_SOURCE_DIR}/include
                             ${PROJECT_SOURCE_DIR}/external/raylib-5.0_linux_amd64/include)
 target_link_libraries(Chippy m ${PROJECT_SOURCE_DIR}/external/raylib-5.0_linux_amd64/lib/libraylib.a)
